# kamasazii-vecter-omega3d

./: .gitignore  Cargo.toml  README.md  index.html  index.html.audit_backup  package.json  serve_local.js  star_sparrow_builder.css  star_sparrow_builder.js  style.css  tmp_log_bbox.js
assets/: critical_medical_drone.glb  star-sparrow-modular-spaceship (1).glb
assets/models/90s_vaporwave_neon_grid_animated (1)/: license.txt
assets/models/bogota_skyline_01_-rawscan/: license.txt  scene.gltf
assets/models/cyberpunk_city - Copy/: license.txt  scene.gltf
fonts/: _download.js  _snb.css  fonts.css
js/: analytics.js  arena.js  boundaries.js  config.js  dom.js  error-logger.js  hot-reload.js  hud.js  input.js  killfeed.js  main.js  math.js  network.js  radar.js  renderer.js  rhai-errors.js  ships.js  state.js  weapon-select.js  weapons.js
scripts/: ai_apex.lua  ai_apex.rhai  weapons.lua  weapons.rhai
server/: go.mod  main.go
src/: lib.rs
